# Out-Of-The-Dark

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  game.cpp  game.h  gameObject.h  gameplay.cpp  gameplay.h  ideas.txt  level.cpp  level.h  main.cpp  mazeBuilder.cpp  mazeBuilder.h  menu.cpp  menu.h  screen.cpp  screen.h  section.h  settings.h  uiClass.cpp  uiClass.h
assets/: The Official Player Guide.docx
getMazeName/: filename.txt  openFile.py  saveAs.py
levels/: hi.maze  level_2.maze  level_3.maze  level_4.maze  maze_1.maze  maze_2.maze
licenses/: 1001fonts-rabelo-eula.txt  2nd_sonata_malign_chords.txt
settings/: settings.csv
src/: game.cpp  game.h  gameplay.cpp  gameplay.h  main.cpp  mazeBuilder.cpp  menu.cpp  menu.h
src/cpp/: game.cpp  game.h  gameplay.cpp  gameplay.h  main.cpp  mazeBuilder.cpp  mazeBuilder.h  menu.cpp  menu.h  section.h  settings.h
src/getMazeName/: openFile.pyw  saveAs.pyw
src/python/: filename.txt  openFile.pyw  saveAs.pyw
user_data/: settings.csv
user_data/levels/: level_1.maze  level_3.maze
